alignment fixes

--- a/extension/utils/main.css
+++ b/extension/utils/main.css
@@ -9,6 +9,7 @@
   label {
     font-size: 14px;
   }
+  margin-bottom: 15px;
 }
 
 .toggle-container {
@@ -17,12 +18,12 @@
   h1 {
     font-size: 22px;
     font-weight: 600;
-    margin: 20px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
   }
   h2 {
     font-size: 18px;
     font-weight: 600;
-    margin: 20px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
   }
   
 }
